# lame-software

./: CMakeLists.txt  CMakePresets.json  README.md
include/lame/: Event.h  SoftTimer.h
src/: Event.c  SoftTimer.c
tests/: CMakeLists.txt  EventTest.cpp  SoftTimerTest.cpp  allTests.cpp
